@@ -1,3 +1,9 @@
+2005-08-09  Andy Wingo  <wingo@pobox.com>
+
+	* gobject/pygobject.c (pygobject_new_with_interfaces): Use the
+	generic setattr protocol instead of getting the module's
+	dictionary and using setitem. Fixes bug #312999.
+
 2005-08-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* codegen/reversewrapper.py (GObjectReturn.write_conversion): Add
